HTTP TX Endpoint: Make usage of JSON Factory and the associated codec thread safe.
Cherry picked from c383c83704e42ab7ab06987ecf2d69140a39d26d, fixed for
older Jersey HK2 version in 4.0 (no JsonFactoryBinder).

The `JsonMessageBodyWriter` makes use of of `ExecutionResultSerializer`.
While the former is a singleton, it starts a stateful processing by
retrieving a `TransactionHandle` from the `OutputEventSource` and passed
it to the serializer and eventually to the default `Neo4jJsonCodec`.

With the codec, an instance of `JsonFactory` is configured. The
`JsonFactory` is said to be thread safe - after configuration! Setting
the codec is reconfiguring it.

This lead to a scenario in which the `JsonGenerator` retrieved from the
factory was dealing with a different `TransactionHandle` than the
stateful serializer itself. This leads to transaction related issues in
all scenarios in which the properties of an entity are reloaded.

The most simple fix would have been copying the `JsonFactory` via
`copy()` inside the `ExecutionResultSerializer`. However, the bug gives
us the opportunity for improving the HTTP endpoint a bit more with
future extensiblity in mind.

The serializer is responsible now for
- copying the `JsonFactory`
- creating an instance of the codec to be used and passing the
transaction handle
- solely responsible for handling events

This fixes not only the bug, but removes the tight coupling between the
`JsonMessageBodyWriter`, `Neo4jJsonCodec` and the serializer, allowing
for additional codecs in the future.

A test has been added to `ExecutionResultSerializerTest` to assert the new behaviour.
The test class needed rework, as it kept most mocks as local state. For
testing the threading issue, individual transaction handlers and
serializers have been required.
The opportunity was used to make the rest of test a bit more uniform in
terms of JDK 11 usage.